--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,7 +37,7 @@ page {
   left: 40px;
   padding: 17rpx 0;
   width: 75%;
-  z-index: 1;
+  /* z-index: 1; */
   background-color: white;
 }
 .search-button {
@@ -206,5 +206,66 @@ page {
   position: relative;
   left: -80px;
   top: 20px;
+}
 
+.radio-group {
+  display: flex;
+  flex-direction: column;
+  padding-left: 10px;
+}
+.radio-group .radio {
+  margin-bottom: 10px;
+}
+.side-bar {
+  background: whitesmoke;
+  position: fixed;
+  width: 400rpx;
+  height: 100%;
+  top: 0;
+  right: 0;
+  transform: translate(400rpx);  
+  transition: all 0.5s ease-out; 
+  overflow: visible; 
+  /* box-shadow:0 2px 2px #C9C9C9; */
+}
+.side-bar-top {
+  padding-top: 10px;
+  background: white;
+  box-shadow:0 2px 2px #C9C9C9;
+}
+.side-bar-top .side-bar-title {
+  font-size: 18px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.side-bar-middle {
+  margin-top: 10px;
+  box-shadow:0 2px 2px #C9C9C9;
+  font-size: 16px;
+  height: 100rpx;
+  background: white;
+  text-align: center;
+  padding-top: 50rpx;
+  border-top: 1px solid #C9C9C9;
+
+}
+.side-bar .side-bar-bottom {
+  width: 100%;
+  height: 80rpx;
+  position: absolute;
+  bottom: 0;
+  border-top: 1px solid #C9C9C9;
+}
+.btn {
+  height: 80rpx;
+  width: 200rpx;
+  text-align: center;
+  vertical-align: middle;
+  display: inline-block;
+  padding-top: 20rpx;
+  font-size: 14px;
+}
+.side-bar-bottom .side-bar-buttons {
+  display: inline-block;
+  flex-direction: column;
 }
